--- a/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
+++ b/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
@@ -11,11 +11,13 @@ sidebar:
 
 
 
-## PL(Programming Language)란?
+# PL(Programming Language)란?
 
 > 정리 하고 싶은 부분만 정리한 것이기 때문에 내용이 탄탄하지는 않다는점 참고
 
-### PL?
+<br>
+
+## PL?
 
 * **계산 과정을 기계, 사람이 읽을 수 있게 기술한 표기법**
 * **종류** : 절차형(명령형) 언어, 함수형 언어, 논리 언어, 객체-지향 언어 등등  
@@ -32,11 +34,9 @@ sidebar:
 **컴파일러** : 의미 분석후 코드 생성 -> 목적 프로그램, 파일 생성   
 **인터프리터** : 의미 분석후 해석(실행)
 
+<br><br>
 
-
-
-
-### 추상화 - 데이터, 제어(명령어), 추상자료형(ADT)
+## 추상화 - 데이터, 제어(명령어), 추상자료형(ADT)
 
 * **컴퓨터의 데이터, 명령어, 연산 등을 추상화**
 
@@ -52,11 +52,9 @@ sidebar:
 **추상 자료형(데이터 + 관련 연산)**  
 => 데이터와 관련된 연산들 캡슐화하여 정의한 자료형(예: Modula-2모듈, Ada패키지, (C++,Java)등의 클래스)
 
+<br><br>
 
-
-
-
-### 자료형
+## 자료형
 
 * **값의 집합 + 연산의 집합**
 * **타입 구성자** : 기본 자료형으로부터 더 복잡한 자료형(**복합 타입**)을 구성하는 방법    
@@ -67,26 +65,25 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 => 값 : 그 타입의 변수가 가질 수 있는 값들의 집합. x ∈ Integer  
 => 연산 : 추가로 그 값에 적용 가능한 연산들의 모음(데이터 타입에 맞게 연산하는지 체크)
 
-#### 1. C의 자료형(기본형, 파생형으로 나뉨)
+<br>
+
+### 1. C의 자료형(기본형, 파생형으로 나뉨)
 
 * **정수형**은 아스키코드 값이 저장. **무치형**은 값이 없다는 것. **아스키코드**(1byte=8bit)는 문자만 표현
-
 * 구조체는 멤버변수가 **각각의** 메모리 공간을 할당받고 있음
-
 * **공용체**는 같은 메모리공간을 모든 변수가 공유하는 형태
-
 * C에선 **boolean**형 타입 없고, 0이면 false, 1이면 true 이런식임
 
-#### 2. Java의 자료형(기본형, 참조형으로 나뉨)
+<br>
+
+### 2. Java의 자료형(기본형, 참조형으로 나뉨)
 
 * **유니코드**는 더 커서 한글도 표현. **boolean**형 타입도 존재
 * **참조 자료형**을 보면 C에서 포인터와 같은 것 같지만 포인터는 연산이 가능해서 메모리에서 직접 값을 변경할 수 있지만 참조 자료형은 불가. 그래서 메모리 해제도 GC가 동작하는 것(가비지 컬렉션)
 
+<br><br>
 
-
-
-
-### 자동 형변환
+## 자동 형변환
 
 **자동으로 형 변환하는 묵시적 형 변환**
 
@@ -94,10 +91,8 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
   * 그러나 반대의 경우는 정보 손실이 일어날일이 없음. 확장 변환(y=x)
 * **축소 변환** : 확장 변환의 반대
   * 큰타입이 작은타입으로 바뀌려는건 정보 손실. 축소 변환(x=y)
-
 * **대입 변환** : `대입문`도 확장 변환인 경우에만 자동 수행(축소 변환은 X)
   * 그런데 예외적으로 int 상수에 대해서만 **자동 축소 변환가능**
-
 * 예시
   * byte b = 123; // 축소 변환
   * short s = 456; // 축소 변환
@@ -114,11 +109,11 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 
 * C, 자바 둘다 문제없음. 즉, 명시적이지 자동 묵시적 형변환이 아님
 
-<br>
+<br><br>
 
-## 프로그래밍 패러다임
+# 프로그래밍 패러다임
 
-### 명령형(절차) 프로그래밍(C,Pascal,Ada,Python)  
+## 명령형(절차) 프로그래밍(C,Pascal,Ada,Python)  
 
 * **기계형 명령어들을 좀 더 다루기 쉽게 해준다**  
   **즉, 사람보다는 컴퓨터모델을 기반으로 만들어진 언어이다.**
@@ -131,11 +126,9 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 **메모리(변수)** 사용  
 **대입문**(배정문=변수의 값을 변경) 사용   
 
+<br><br>
 
-
-
-
-### 함수형 프로그래밍(Lisp,Scheme,ML,Haskell)
+## 함수형 프로그래밍(Lisp,Scheme,ML,Haskell)
 
 **수학 함수** 형태   
 **메모리 개념 없음**  
@@ -144,11 +137,9 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 **반복문 없음**   
 => **대안 : 리커전 반복**
 
+<br><br>
 
-
-
-
-### 논리 프로그래밍(Prolog)
+## 논리 프로그래밍(Prolog)
 
 **선언적 프로그래밍**(선언적은 과정은 필요없고 특징만 생각)  
 **정형(술어) 논리**를 기반으로 한다  
@@ -156,11 +147,9 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 **메모리 개념 없음**  
 => **변수**는 부분 결과 값에 대한 **이름일 뿐**
 
+<br><br>
 
-
-
-
-### 객체지향 프로그래밍(종류 매우 많음) - 객체 개념
+## 객체지향 프로그래밍(종류 매우 많음) - 객체 개념
 
 * **(C)프로그램**은 **데이터**(변수, 구조체/배열 등) + **명령어**(배정문, 조건문/반복문, 함수)로 구성
 
@@ -170,8 +159,6 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 **객체(instance=인스턴스)** 는 속성(데이터)+행동(연산)이며, 클래스로 생성   
 **프로그램**은 클래스들의 집합  
 **프로그램 실행**은 서로 상호작용하는 객체들의 집합
-
-<br>
 
 
 
