--- a/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
+++ b/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
@@ -11,13 +11,13 @@ sidebar:
 
 
 
-## 구문법 - 문법검사
+# 구문법 - 문법검사
 
 `좌측, 우측 유도`와 `모호성` 구분하고 `좌, 우 결합`과 햇갈리지말고 구분할 것
 
+<br><br>
 
-
-### 정규식
+## 정규식
 
 * x : 문자 x를 나타냄
 
@@ -35,11 +35,9 @@ sidebar:
   * [A-Z] = A|\~\~|Z
   * [0-9] = 0|1|~~|9 
 
+<br><br>
 
-
-
-
-### 문법 형태
+## 문법 형태
 
 `N -> D | ND` : 한자리(D), 두자리이상(ND) 의미 => **구문법**
 
@@ -55,9 +53,9 @@ sidebar:
   * 생성규칙 오른쪽 : ND
     * 논터미널+터미널
 
+<br><br>
 
-
-### 유도
+## 유도
 
 **논터미널이 없을때까지 시작 심볼부터 생성규칙에 맞게 계속 반복**
 
@@ -75,11 +73,9 @@ sidebar:
   * **그저 조건에 맞는걸로 유도한것. 그리고 그 뒤에부터가**
   * **해야하는 좌측, 우측 유도를 결정해서 유도를 해야하는 것임.**
 
+<br><br>
 
-
-
-
-### 모호성
+## 모호성
 
 **2개이상의 좌측(우측) 유도, 파스트리를 가짐. 즉, 3+(2\*3), (3+2)*3 같은 단점 발생**
 
@@ -98,6 +94,8 @@ sidebar:
   * 직접 해보면 2개의 유도가 나오는것을 알 수 있음
   * 이를 언어 구문 일부 변경으로 모호성 해결 가능
 
+<br>
+
 **모호성 해결법 1(우선순위 적용)**
 
 * **문법 재작성** : 원래 언어와 같은 언어 정의하면서 모호하지 않게 문법 재작성
@@ -105,6 +103,8 @@ sidebar:
     E -> E+T|T  
     T -> T*F|F  
     F -> N|(E)
+
+<br>
 
 **모호성 해결법 2(if 끝에 end 붙이기 등등)**
 
@@ -115,11 +115,9 @@ sidebar:
 
 **직접 해보면 모호성이 해결되었다는 것을 알 수 있음**
 
+<br><br>
 
-
-
-
-### BNF, EBNF
+## BNF, EBNF
 
 BNF 사용 기호
 
@@ -129,7 +127,7 @@ BNF 사용 기호
   * 예 : \<expr> -> \<term>  
     					 | \<expr> + \<term>
 
-
+<br>
 
 EBNF 사용 기호(BNF에 추가)
 
