--- a/_posts/Major/Programming_Language/2022-08-22-PL 타입시스템(4).md
+++ b/_posts/Major/Programming_Language/2022-08-22-PL 타입시스템(4).md
@@ -11,7 +11,7 @@ sidebar:
 
 
 
-## 서론
+# 서론
 
 **데이터 타입** = 값의 집합 + 연산의 집합
 
@@ -23,18 +23,16 @@ sidebar:
 
 * 데이터 타입이 잘못 사용되는 것(타입에러)    
 
-
+<br>
 
 **타입 검사** : 타입 정보를 이용해 실행 중에 발생 가능한 타입 오류를 미리 검사하는 것
 
 * C의 포인터는 프로그램 안전성에 좋지않다. 예로 int 포인터 변수에 주소 +100 한다면 그 메모리 주소가 만약 bool타입 인데 int형 값 저장하면 타입 에러가 발생하고 프로세스가 kill해버려 갑자기 죽는 프로그램이 될 수 있다.
 * 타입 검사 안 함(어셈블리어)
 
+<br><br>
 
-
-
-
-### 강한, 약한 타입
+## 강한, 약한 타입
 
 **타입오류를 얼마나 검출 하느냐에 따라 강한, 약한 타입검사로 또 나눌 수 있다.   
 많이 검출하면 강한, 적으면 약한으로 나눈다.**
@@ -45,7 +43,7 @@ sidebar:
 
 * Java, C#, Python
 
-
+<br>
 
 **약한 타입 언어 : 느슨한 타입 규칙을 적용한 언어. 타입 검사를 통과한 프로그램이 실행 중에 타입 오류가 발생가능.**
 
@@ -53,18 +51,16 @@ sidebar:
 * C는 포인터를 생각해보면 다른 메모리 주소를 사용시 타입이 다를 수 있음.
 * 그러나 C는 약한 규칙이라서 오류가 아닌것
 
+<br><br>
 
-
-
-
-### 정적, 동적 타입
+## 정적, 동적 타입
 
 **타입검사를 언제하느냐에 따라 정적, 동적 타입검사로 나눌 수 있다.**
 
 * 실행 전(정적)
 * 실행 후(동적)
 
-​    
+<br>
 
 **정적 타입 언어 : 변수의 타입이 컴파일 시간에 결정되어 고정되는 언어. 보통 `컴파일 시간`에 타입 검사**
 
@@ -72,7 +68,7 @@ sidebar:
 * 장점 : 타입오류가 있는걸 실행하지않고 걸러냄.
 * 단점 : 동적과 반대로 타입제한이 있고, 여러 타입을 바꿔가며 사용 불가.
 
-
+<br>
 
 **동적 타입 언어 : 변수의 타입이 저장되는 값에 따라 실행 중에 바뀔 수 있는 언어. 보통 `실행 시간`에 타입 검사**
 
@@ -80,13 +76,11 @@ sidebar:
 * 장점 : 타입제한이 없고 여러 타입을 바꿔가며 사용가능.
 * 단점 : 정적과 반대로 실행전에 타입오류를 못 걸러냄.
 
-​    
+<br><br>
 
-​    
+## 대표적인 언어 예시
 
-### 대표적인 언어 예시
-
-* 자바 : 강한 정적 타입 언어
+* **자바 : 강한 정적 타입 언어**
 
 * C : 약한 정적 타입 언어
 
@@ -94,9 +88,9 @@ sidebar:
 
 * JavaScript : 약한 동적 타입 언어
 
-<br>
+<br><br>
 
-## 타입 시스템
+# 타입 시스템
 
 **안전한 타입 시스템 : 이 시스템 통과시 타입 오류 발생하지 않을 것이 보장됨.**
 
@@ -104,11 +98,9 @@ sidebar:
 
 * 앞에선 `변수 값`을 저장하는 `환경(state)`이였고, 여기선 `타입`을 저장하는 `타입 환경`을 사용
 
+<br><br>
 
-
-
-
-### 언어 S의 타입 시스템
+## 언어 S의 타입 시스템
 
 **타입 환경 : 각 지점에서 유효한 변수들의 타입 정보를 유지**
 
@@ -130,13 +122,11 @@ sidebar:
 
 참고 : 언어 S는 임의로 만든 언어
 
-<br>
+<br><br>
 
-## 참고
+# 참고
 
-
-
-### 자바
+## 자바
 
 **배열 선언은 정적이고, 배열 크기가 동적이며 힙에 할당한다.**
 
@@ -146,7 +136,7 @@ sidebar:
 * 정해진 크기도 동적으로 더 키우고 줄이는 ArrayList를 제공
 * 그리고 new로 생성하니까 힙에 동적으로 할당
 
-
+<br>
 
 **예시**
 
@@ -160,11 +150,9 @@ arr.add(3); // 크기 0이였는데 동적으로 삽입
 arr.get(0); // 값 출력 잘 나옴
 ```
 
+<br><br>
 
-
-
-
-### C언어
+## C언어
 
 **배열 선언은 정적이고, 배열 크기도 정적이다.**
 
@@ -172,7 +160,9 @@ arr.get(0); // 값 출력 잘 나옴
 
 자바처럼 ArrayList 같은 동적 배열도 없다.
 
+물론, malloc 처럼 동적 할당으로 유사하게 만들 수는 있다.
 
+<br>
 
 **예시**
 
@@ -182,8 +172,3 @@ int arr[size]; // 에러(컴파일때 size 타입만 알고있음)
 int arr[30]; // 가능
 arr[31] = 3; // 에러(동적으로 크기 못 키움)
 ```
-
-
-
-
-
