--- a/_posts/Major/Programming_Language/2022-08-24-PL 예외(6).md
+++ b/_posts/Major/Programming_Language/2022-08-24-PL 예외(6).md
@@ -11,7 +11,7 @@ sidebar:
 
 
 
-## 예외 처리
+# 예외 처리
 
 **예외(Exceptions) - 심각하지 않은 오류**
 
@@ -23,22 +23,18 @@ sidebar:
 
 * 보통 언어들은 종료 모델을 따르는중
 
+<br><br>
 
-
-
-
-### Python 예외 문법(Java도 유사) – 종료 모델 
+## Python 예외 문법(Java도 유사) – 종료 모델 
 
 * python : try, except, finally, raise
 * Java 차이점 : except -> catch, raise -> throw
 
 * try문 중첩 == except(catch)문 연속 사용(연속이 더 깔끔)
 
+<br><br>
 
-
-
-
-### 오류 메시지
+## 오류 메시지
 
 **오류 메시지 만들기**
 
@@ -47,11 +43,9 @@ sidebar:
 * 예외이름으로 만든 예외 클래스에 __str__ 메소드 구현
   * raise를 통해 발생한 예외를 미리 만든 동일한 예외이름 클래스의 str 메소드로 반환해서 표현
 
+<br><br>
 
-
-
-
-### 예외 검사
+## 예외 검사
 
 **예외 검사** – 예외처리 구문이 있는지 `컴파일 시간`에 미리 검사하자라는 뜻
 
@@ -63,7 +57,7 @@ sidebar:
 
 * **비검사 예외** – 예외 처리 여부를 컴파일러가 `미리 검사하지 않는다`
 
-
+<br>
 
 파이썬의 포괄적 예외 처리의 예시로 `BaseException, Exception`이 많이 사용. 즉, 상위 쪽 계층.
 
