--- a/_posts/Major/Programming_Language/2022-08-21-PL 의미론(3).md
+++ b/_posts/Major/Programming_Language/2022-08-21-PL 의미론(3).md
@@ -11,7 +11,7 @@ sidebar:
 
 
 
-## 의미론 - AST
+# 의미론 - AST
 
 **정적 유효범위(Static scope) 규칙** : 선언된 이름은 선언된 블록 내에서만 유효
 
@@ -27,31 +27,28 @@ sidebar:
 
   * Eval: (Statement, State) -> State
 
+<br>
+
 **의미론 : 각 문장 S마다 상태 변환 함수 정의, 프로그램 실행과정을 상태 변환 과정으로 설명**
 
 현재 계속 정적 유효범위 규칙을 따르는 중
 
+<br><br>
 
-
-
-
-### 좌, 우결합
+## 좌, 우결합
 
 **연산자 결합성 : 동일한 우선순위 연산자가 두개 이상 인접한 경우 무엇을 먼저 수행하는지? 좌, 우 결합**
 
 **좌측, 우측 유도와 구분할 것**
 
 * **좌결합** : 왼쪽부터 우선 결합하는 규칙(대부분 이항 연산자)
+  
   * **좌순환 규칙** : E->E-T|T  앞의 E가 재귀 즉, 왼쪽 서브트리가 더 깊고 먼저 연산되는 것.
-
+  
 * **우결합** : 오른쪽부터 우선 결합하는 규칙(대부분 단항, 대입 연산자)
   * **우순환 규칙** : !E|id|...  뒤의 E가 재귀 즉, 오른쪽 서브트리가 더 깊고 먼저 연산되는 것.
 
   
-
-
-
-
 
 
 
