--- a/_posts/Major/Programming_Language/2022-08-26-PL 상속(8).md
+++ b/_posts/Major/Programming_Language/2022-08-26-PL 상속(8).md
@@ -17,7 +17,7 @@ sidebar:
 
 <br>
 
-## Java 상속
+### 1-1. Java 상속
 
 **extends** 사용, **단일 상속**만 지원(python, C++ 은 여러개 지원!)
 
@@ -29,11 +29,9 @@ sidebar:
 
 * **메소드 서명(signature)** - 메소드의 매개변수 이름, 개수, 순서, 타입
 
+<br>
 
-
-
-
-### 1) 다형 참조
+#### 1-2. 다형 참조
 
 **다형 참조** – 참조변수는 선언된 클래스의 객체뿐만 아니라 자손 클래스의 객체도 참조 가능
 
@@ -44,34 +42,27 @@ sidebar:
 
 **참고로 이렇게 암묵적 확장만 가능하지 축소는 정보손실 때매 애초에 불허**
 
+<br>
 
-
-
-
-### 2) 타입 캐스팅
+#### 1-2. 타입 캐스팅
 
 **타입 캐스팅** – 부모클래스가 해당 함수 없을 때 사용**(반드시 동적 바인딩과 구분!!!)**
 
-* 자바에서 자동 축소 아예 불허인데 INT형만 가능(범위 이내 가능. 예외적 상황임).
-
+* 자바에서 자동 축소 아예 불허인데 **INT형만 가능**(범위 이내 가능. 예외적 상황임).
 * 캐스팅(범위 이상 가능). 즉, 캐스팅은 강제로 변환!(double->int같은것). 정보손실도 상관없다는 것. 다만!!
-
 * **클래스에선 상속에 다형참조 여야 가능**
   * 예시로 `Employee e = new Manager(); e.getbonus();`   
     getbonus() 메소드가 Manager꺼다? 그럼 부모엔 함수 없어서 사용불가.  
     이럴 때 아예 타입을 바꿔야 한다는 것!(타입 캐스팅). `(Manager) e.getbonus();` 가 올바르다.
-
 * **타입 캐스팅이 오류인 예?** 
   * `Employee a = new Employee(); Manager b = (Manager) a;`  
     다형 참조가 아니기 때문에 캐스팅 불가.
 
 **즉, 다형참조 후에 캐스팅해야 캐스팅 가능, 다형참조 아니면 캐스팅 불가**
 
+<br>
 
-
-
-
-### 추상 클래스
+#### 1-3. 추상 클래스
 
 **추상 클래스** – 덜 구현된 클래스. 따라서 실체화될 수 없다(객체 생성X)
 
@@ -81,7 +72,7 @@ sidebar:
   * 추상 메소드는 final, static으로 선언X
   * 추상 메소드는 코드처럼 본체가 없다
 
-
+<br>
 
 추상클래스가 Worker였고, pay()메소드가 추상메소드였다면? 
 
@@ -92,7 +83,7 @@ sidebar:
 
 <br>
 
-## C++ 상속
+### 2-1. C++ 상속
 
 **명칭 구분**
 
@@ -100,7 +91,7 @@ sidebar:
 
 * Java : 인스턴스 변수, 메소드
 
-
+<br>
 
 **C++의 가상 함수** – virtual로 선언된 함수로 자식클래스에서 재정의 가능한 함수(Java 메소드는 virtual!!)
 
@@ -111,7 +102,7 @@ sidebar:
 * 가상 함수가 아니라면 정적 바인딩을 한다.(컴파일시간. 타입선언)
   * 정적 바인딩 장점은 실행 효율. 그래서 C++은 자바보다 기본적으로 빠름.
 
-
+<br>
 
 유효범위 해결 연산자 – Student::sleep() 혹은 Worker::sleep()
 
@@ -119,10 +110,12 @@ sidebar:
 
 <br>
 
-## Python 상속
+### 3-1. Python 상속
 
 C++의 virtual선언 같은 것이 필요없고, 자바처럼 바로 재정의(오버라이딩)가능
 
 다중상속의 죽음의 다이아몬드 문제없음
 
 * 다중상속의 메소드를 메소드 탐색 순서대로 확인하기 때문
+
+<br>
