docs: 깃허브 명령어 관련 새로정리

--- a/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
+++ b/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
@@ -12,9 +12,9 @@ typora-root-url: ../../..
 
 
 
-## GIT 사용법(CLI)
+## GIT 사용법
 
-* `GIT BASH` 사용(cmd같은 터미널)
+* CLI는 `GIT BASH` 사용(ex: cmd같은 터미널)
 * `code .` 명령어를 통해 해당 폴더에서 vsCode 바로 실행 가능
 
 <br><br>
