docs: 깃 블로그 구조도 작성

--- a/_posts/etc/Blog/2023-12-02-(Blog) 폰트 수정 - 깃 블로그 TIP 1.md
+++ b/_posts/etc/Blog/2023-12-02-(Blog) 폰트 수정 - 깃 블로그 TIP 1.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] Intro & 폰트 수정"
+title:  "[Blog] Intro & 폰트 수정 - 깃 블로그 TIP 1"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
@@ -14,7 +14,13 @@ typora-root-url: ../../..
 
 ## Intro.. 
 
-**테마 다운 전 기본적으로 파악해야 하는 폴더들** t
+**필자의 깃 블로그 커스텀 방식들을 정리하려고 한다!**
+
+> 정리 안하니까 매번 똑같은걸로 시간낭비..
+
+<br>
+
+**테마 다운 전 기본적으로 파악해야 하는 폴더들**
 
 - `asset` : font, css, images (사이트 로고 및 사진 파일 등) 등이 담겨 있다.
   * `asset/css/_main.scss` 에서 구글 폰트 **@import** 할 수 있으므로 참고
