--- a/_posts/etc/Blog/2023-12-22-(Blog) 지킬 테마 skin 수정(색상 적용) - 깃 블로그 TIP 2222.md
+++ b/_posts/etc/Blog/2023-12-22-(Blog) 지킬 테마 skin 수정(색상 적용) - 깃 블로그 TIP 2222.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] 지킬 테마 및 전반적인 폰트 색상 수정"
+title:  "[Blog] 지킬 테마 skin 수정(색상 적용) - 깃 블로그 TIP 123123"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
@@ -12,22 +12,38 @@ typora-root-url: ../../..
 
 
 
-## 지킬 테마 수정 - skin제작
+# Intro
 
-`_config.yml` 수정을 통해 **"myskin"** 로 수정하였다.
+**지킬 테마를 수정하기 위해 skin을 변경해보자!**
 
-* 만약, 로컬로 서버 구동해서 테스트중이라면 해당 파일은 꼭 서버껏다켜야 반영이 됨.
+* 배경색과 폰트색상 등이 변경
+* 아래 그림 참고
 
-```yaml
-minimal_mistakes_skin    : "myskin" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-```
+skin이 `dirt` 일 때
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/488025b0-dcdb-4ace-bd81-317d72ee0123) 
 
 <br>
 
-그리고 테마 수정으로 인해 폰트 색상들로 원하지 않은 색상으로 변한것들도 많기 때문에 커스텀 해주자.
+skin이 `myskin` 일 때
 
-* `_sass/minimal-mistakes/skins/_myskin.scss` 를 수정하려고 한다.
-* 파란색 계통으로 스킨을 만들어 보겠다.
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/b7b2446a-e4d9-4f6f-ab71-39b63ed59b10)  
+
+<br><br>
+
+# 지킬 테마 수정
+
+**다음과 같은 순서로 진행하자!**
+
+`myskin 제작 -> myskin 적용 -> 폰트 색상 커스텀`
+
+<br>
+
+## myskin 제작
+
+`_sass/minimal-mistakes/skins/_myskin.scss` 가 없다면 만들면 되고 있으면 바로 수정하자
+
+* **파란색 계열**로 수정
 
 ```scss
 /* ==========================================================================
@@ -66,7 +82,21 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 
 <br><br>
 
-## 사이드바, 페이지, 본문 폰트 색상 변경
+## myskin 적용
+
+`_config.yml` 수정을 통해 **"myskin"** 로 수정
+
+```yaml
+minimal_mistakes_skin    : "myskin" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+```
+
+<br><br>
+
+## 폰트 색상 커스텀
+
+**테마 수정으로 인해 폰트 색상들로 원하지 않은 색상으로 변한것들도 많기 때문에 커스텀 진행!**
+
+<br>
 
 ### 사이드바 설정
 
@@ -86,7 +116,7 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 
 <br>
 
-### 게시물 제목 모음 페이지의 제목란
+### 게시물 제목, 페이지 제목
 
 * `archive.scss`
 
