--- a/_posts/etc/Blog/2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정.md
+++ b/_posts/etc/Blog/2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정.md
@@ -33,7 +33,7 @@ typora-root-url: ../../..
 
 * `%` 와 `{` 를 함께 사용하는 ruby 문법이 있는데, 이 문법이 자꾸 실행이되기 때문에 사진으로 코드 대체
 
-![image-20230315021822610](.\images\2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정\image-20230315021822610.png)
+![image-20230315021822610](https://github.com/BH946/bh946.github.io/assets/80165014/8b02829a-fbd2-410c-82aa-83e9c30b86da) 
 
 <br>
 
