--- a/_posts/etc/Blog/2022-09-12-(Blog) 카테고리, 태그 모양 수정.md
+++ b/_posts/etc/Blog/2022-09-12-(Blog) 카테고리, 태그 모양 수정.md
@@ -20,7 +20,7 @@ typora-root-url: ../../..
 
 * `%` 와 `{` 를 함께 사용하는 ruby 문법이 있는데, 이 문법이 자꾸 실행이되기 때문에 사진으로 코드 대체
 
-![image-20230315021926188](.\images\2022-09-12-(Blog) 카테고리, 태그 모양 수정\image-20230315021926188.png)
+![image-20230315021926188](https://github.com/BH946/bh946.github.io/assets/80165014/22eefbea-6ef8-450a-ab94-62fb6a10a61a) 
 
 <br>
 
