--- a/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기 - 깃 블로그 TIP 4.md
+++ b/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기 - 깃 블로그 TIP 4.md
@@ -50,6 +50,11 @@ typora-root-url: ../../..
 
 먼저, 카테고리와 목차 설정을 제대로 따라하고 싶다면 Intro에서 소개한 "참고문헌" 영상을 꼭 참고!
 
+**자꾸 ruby 문법이 자동 실행이 되버려서 "사진으로 코드 대체"**
+
+* 코드가 보고싶다면 [찐 참고문헌](https://ansohxxn.github.io/blog/category/)
+* 이분이 정말 잘 정리하셨음!
+
 <br>
 
 ## 카테고리 웹 상단 추가 + 태그
@@ -148,81 +153,16 @@ main:
 * "[체크리스트] Sprin..." 부분인 게시글 제목 부분 역할을 합니다.
 * 코드에 보면 `post__taxonomy.html` 부분이 있는데 이것도 추가한 파일입니다.
   * "[체크리스트] Spr..." 오른쪽에 있는 카테고리, 태그 내용부분 입니다.
-* 자꾸 아래 문법이 자동 실행이 되버려서 "사진으로 대체"
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/e0aaed99-6b10-4691-b015-3fc13951fb8a) 
-
-```html
-<div class="{{ include.type | default: "list" }}__item">
-  <article class="archive-item">
-      <div>
-          <span>
-            <a href="{{ post.url }}" style="text-decoration-line: none;">{{post.title}}</a>
-          </span>
-          <small> 
-            <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"> </i>{{ post.date | date: " %Y.%m.%d" }}
-            {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}
-              {%- include post__taxonomy.html -%}
-            {% endif %}
-          </small>
-      </div>
-    </article>
-</div>
-```
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/e09974e2-ab02-479c-a3fd-0e8b0d4e1891) 
 
 <br>
 
 `_includes/post__taxonomy.html` 의 코드입니다. 자유롭게 커스텀하면 됩니다.
 
-```
-<!--Archive page 용-: (post -> page)-->
-<!--page__taxonomy.html에서 가져 옴-->
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/f759e7b4-1d9b-4449-9f67-7b16fac804f9) 
 
-{%- if site.category_archive.type and post.categories[0] -%}
-    {%- case site.category_archive.type -%}
-        {%- when "liquid" -%}
-        {%- assign path_type = "#" -%}
-        {%- when "jekyll-archives" -%}
-        {%- assign path_type = nil -%}
-    {%- endcase -%}
-
-    {% case site.tag_archive.type %}
-        {% when "liquid" %}
-            {% assign path_type = "#" %}
-        {% when "jekyll-archives" %}
-            {% assign path_type = nil %}
-    {% endcase %}
-
-    {%- if site.category_archive.path and site.tag_archive.path -%}
-        {%- capture post_categories -%}{%- for category in post.categories -%}{{ category | downcase }}|{{ category }}{%- unless forloop.last -%},{%- endunless -%}{%- endfor -%}{%- endcapture -%}
-        {%- assign category_hashes = post_categories | split: ',' | sort -%}
-        {% capture post_tags %}{% for tag in post.tags %}{{ tag | downcase }}|{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-        {% assign tag_hashes = post_tags | split: ',' | sort %}
-        <span class="page__taxonomy">
-            <span itemprop="keywords">
-                <!-- 카테고리 수정하는 곳 -->
-                {%- for hash in category_hashes -%}
-                    {%- assign keyValue = hash | split: '|' -%}
-                    {%- capture category_word -%}{{ keyValue[1] | strip_newlines }}{%- endcapture -%}
-                    <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category" rel="tag">{{ category_word }} </a>{%- unless forloop.last -%}<span class="sep"> </span>{%- endunless -%}
-                {%- endfor -%}
-                
-                <!-- 여기부터 태그 수정하는 곳 -->
-                {% assign check = true %} <!-- check 변수 선언 -->
-                {% for hash in tag_hashes %} 
-                    {% assign keyValue = hash | split: '|' %}
-                    {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-                    <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item-tag" rel="tag"></a>{% unless forloop.last %}<span class="sep"> </span>{% endunless %}
-                    <!-- 원래 a태그 사이에 {{ tag_word }} 로 구성된걸 수정했음 -->
-                    {% if check %} <!-- true면 -->
-                        {% assign check = false %} <!-- false로 다시 초기화해서 빈 공백 나오게 -->
-                    {% endif %}
-                {% endfor %}
-            </span>
-        </span>
-    {%- endif -%}
-{%- endif -%}
-```
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/9015536e-9924-484e-af24-35173c96a154) 
 
 <br>
 
@@ -243,103 +183,15 @@ main:
 
 `_includes/nav_list_main` 의 코드를 참고하여 커스텀!
 
-```html
-<!--전체 글 수를 세기 위한 연산. sum 변수에 전체 글 수 저장-->
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/5faecacb-306d-4b41-ab2a-658c5771507b) 
 
-{% assign sum = site.posts | size %}
-
-<nav class="nav__list">
-  <input id="ac-toc" name="accordion-toc" type="checkbox" />
-  <label for="ac-toc">{{ site.data.ui-text[site.locale].menu_label }}</label>
-  <ul class="nav__items" id="category_tag_menu">
-      <!--전체 글 수-->
-      <li>
-            📂 <span style="font-family:'Cafe24Oneprettynight';">전체 글 수</style> <span style="font-family:'Coming Soon';">{{sum}}</style> <span style="font-family:'Cafe24Oneprettynight';">개</style> 
-      </li>
-      <li>
-        <span class="nav__sub-title">REVISE/KNOWLEDGE</span>
-            <ul>
-                {% for category in site.categories %}
-                    {% if category[0] == "Revise" %}
-                        <li><a href="/categories/revise" class="">수정전 ({{category[1].size}})</a></li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-            <ul>
-                {% for category in site.categories %}
-                    {% if category[0] == "Knowledge" %}
-                        <li><a href="/categories/knowledge" class="">Knowledge(지식) ({{category[1].size}})</a></li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        <!--span 태그로 카테고리들을 크게 분류 -->
-        <span class="nav__sub-title">CODING TEST</span>
-            <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열-->
-            <ul>
-                <!--Cpp 카테고리 글들을 모아둔 페이지인 /categories/algo 주소의 글로 링크 연결-->
-                <!--category[1].size 로 해당 카테고리를 가진 글의 개수 표시--> 
-                {% for category in site.categories %}
-                    {% if category[0] == "Baekjoon" %}
-                        <li><a href="/categories/baekjoon" class="">Baekjoon(백준 개념) ({{category[1].size}})</a></li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-            <ul>
-              {% for category in site.categories %}
-                  {% if category[0] == "BaekjoonTest" %}
-                      <li><a href="/categories/baekjoontest" class="">Baekjoon(백준 문제) ({{category[1].size}})</a></li>
-                  {% endif %}
-              {% endfor %}
-          </ul>
-          <ul>
-            {% for category in site.categories %}
-                {% if category[0] == "ProgrammersTest" %}
-                    <li><a href="/categories/programmerstest" class="">Programmers(프로그래머스 문제) ({{category[1].size}})</a></li>
-                {% endif %}
-            {% endfor %}
-        </ul>
-          <!-- 코드가 너무 많아서 생략... -->
-            <ul>
-              {% for category in site.categories %}
-                  {% if category[0] == "WoowaCourse" %}
-                      <li><a href="/categories/wwc" class="">WoowaCourse ({{category[1].size}})</a></li>
-                  {% endif %}
-              {% endfor %}
-            </ul>
-      </li>
-  </ul>
-</nav>
-```
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/3e177551-19a5-4e73-b3ed-18a8f954978c) 
 
 <br>
 
 `sidebar.html` 의 코드 - 핵심은 nav_list_main 를 include 하는 코드입니다!
 
-```html
-{% if page.author_profile or layout.author_profile or page.sidebar %}
-  <div class="sidebar sticky">
-  {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
-  {% if page.sidebar %}
-    {% for s in page.sidebar %}
-      {% if s.image %}
-        <img src="{{ s.image | relative_url }}"
-             alt="{% if s.image_alt %}{{ s.image_alt }}{% endif %}">
-      {% endif %}
-      {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
-      {% if s.text %}{{ s.text | markdownify }}{% endif %}
-      {% if s.nav %}{% include nav_list nav=s.nav %}{% endif %}
-    {% endfor %}
-    {% if page.sidebar.nav %}
-      {% include nav_list nav=page.sidebar.nav %}
-    {% endif %}
-  {% endif %}
-
-  {% if page.sidebar_main %}
-    {% include nav_list_main %}
-  {% endif %}
-  </div>
-{% endif %}
-```
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/f4f59e84-65bb-497f-b056-b00a67db7365) 
 
 <br>
 
@@ -400,30 +252,11 @@ Blog 카테고리를 예로들자면
 
 * 먼저, `_pages/categories/category-blog.md` 파일을 만들고 카테고리명을 Blog로 설정합니다.
 
-  ```markdown
-  ---
-  title: "Blog"
-  layout: archive
-  permalink: categories/blog
-  author_profile: true
-  sidebar_main: true
-  ---
-  
-  {% assign posts = site.categories.Blog %}
-  {% for post in posts %} {% include archive-single2.html type=page.entries_layout %} {% endfor %}
-  ```
+  ![image](https://github.com/BH946/bh946.github.io/assets/80165014/8347b370-67ad-42cb-a9b5-8678acd1e9d4) 
 
 * 그리고 `_includes/nav_list_main` 에서 해당 카테고리를 적절히 추가합니다.
 
-  ```html
-  <ul>
-      {% for category in site.categories %}
-      {% if category[0] == "Blog" %}
-      <li><a href="/categories/blog" class="">Blog ({{category[1].size}})</a></li>
-      {% endif %}
-      {% endfor %}
-  </ul>
-  ```
+  ![image](https://github.com/BH946/bh946.github.io/assets/80165014/6ecfbd29-9713-4c6d-bd42-2a7fe9a3ce4f) 
 
 * 마지막으로 포스팅할 때 이 카테고리를 사용합니다.
 
