--- a/_posts/etc/Blog/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5.md
+++ b/_posts/etc/Blog/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5.md
@@ -22,7 +22,7 @@ typora-root-url: ../../..
 
 이를 앞에서 이미 **"Recent Posts"** 로 이름을 바꾸는것은 진행을 했다!
 
-그렇다면 카테고리를 등록했을 때 **카테고리별 페이지**를 아래와 같이 만들고 싶다면?? 따라해보자!
+그렇다면 카테고리를 등록했을 때 **카테고리별 대표 페이지**를 아래와 같이 만들고 싶다면?? 따라해보자!
 
 **기존 페이지 모습**
 
@@ -38,382 +38,58 @@ typora-root-url: ../../..
 
 # 페이지 배치 따라하기
 
- 
-
-<br><br>
-
-## 폰트 다운
-
-* 참고 : [폰트 사이트](https://fonts.google.com/)
-
-* 두가지 다운방식이 있고 둘다 사용중
-  * head 태그 방식 - "Nanum Gothic Coding", "Coming Soon", "Iropke Batang" 폰트 다운
-  * css에 @import 방식 - "Cafe24Oneprettynight" 폰트 다운
+`제목 변경 -> 밑줄 제거`
 
 <br>
 
-`_layouts/default.html` 에 head 태그속에 폰트 다운
+## 제목 변경
 
-* "Nanum Gothic Coding", "Coming Soon", "Iropke Batang"
-* **css 빨리 가져오는 꿀팁 - preload**
+제목 스타일을 보면 "Recent Posts" 스타일과 많이 다르다. 따라서 이를 통일해주기 위해 "Recent Posts" 제목을 제거한다.
+
+* `_layouts/home.html` 을 보면 "Recent Posts" 를 나타내는 h태그가 있는데 이를 "주석처리"
+* 이후 `_layouts/archive.html` 에서 아래와 같이 코드를 작성하여 "두 제목"을 한번에 관리하자!
+* `archive__subtitle__default` 를 `archive.scss`에 추가로 정의하게 되고, 자세한 스타일링은 다음 포스팅을 참고하자
+
+![image-20230315021636448](/images/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5/image-20230315021636448.png) 
+
+<br><br>
+
+## 밑줄 제거
+
+사진에서 포스팅글들 보면 제목들이 밑줄이 있는데 이를 제거한다.  
+보통 `archive.html` 을 사용하지만, 필자는 따로 수정한 파일을 사용하므로 `archive-single2.html` 에 변경
+
+* `includes/archive-single2.html` 에서 `text-decoration="none"` 속성을 추가한다.
 
 ```html
-<head>
-    <!--폰트 : "Nanum Gothic Coding", "Coming Soon"-->
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
-    <!--폰트 : "Iropke Batang"-->
-    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
-    <!--폰트(main.css 에서 등록) : "Cafe24Oneprettynight"-->
-
-    <!--main.scss 빨리 로드되게끔.. preload-->
-    <link rel="preload" as="style" href="{{ '/assets/css/main.css' | relative_url }}">
+<a href="{{ post.url }}" style="text-decoration-line: none;">{{post.title}}</a>
 ```
 
 <br>
 
-`assets/css/main.scss` 에 @import 방식
+**또는**
 
-* "Cafe24Oneprettynight"
+`_base.scss` 에서 설정한 a태그의 스타일에서 `text-decoration="none"` 속성을 추가한다.
 
-```scss
-// "Cafe24Oneprettynight" 폰트 추가
-@font-face {
-  font-family: 'Cafe24Oneprettynight';
-  src: local('Cafe24Oneprettynight'), url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-```
-
-<br><br>
-
-## 전역변수 등록(폰트 등록)
-
-`minimal-mistake 테마`는 `_sass/minimal-mistakes/_variable.scss` 파일에 전체적인 css 파일들이 사용할 **“전역 변수”**를 한곳에 모아 선언하고 있다.  
-따라서 여기에 원하는 폰트를 설정해주고, 생성한 **"전역 변수"**로 어디서든 폰트 적용을 할 것이다.  
-
-참고로 여기서 폰트 추가하자마자 적용이 되는 이유는 이 **"전역변수"**가 여기 저기서 이미 사용해서  
-폰트 적용중 이기 때문에 당연히 바로 적용이 된것이라는점!
-
-* 폰트가 여러개 나열되는 이유는 **우선순위** 때문이다
+* 이 방식은 a태그의 경우 전부 밑줄 없애버렸기 때문에 그점은 알아둘것
 
 ```scss
-/* system typefaces */
-$serif: "Coming Soon", Georgia, Times, serif !default;
-$sans-serif: "Iropke Batang", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
-  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
-$monospace: "Nanum Gothic Coding", Monaco, Consolas, "Lucida Console", monospace !default;
-$cute: "Cafe24Oneprettynight" !default;
+/* links */
 
-/* sans serif typefaces */
-$sans-serif-narrow: $sans-serif !default;
-$helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-serif !default;
-```
+a {
+  text-decoration: none;
+  &:focus {
+    @extend %tab-focus;
+  }
 
-<br><br>
+  &:visited {
+    color: $link-color-visited;
+  }
 
-## 적용 커스텀
-
-**폰트가 적용되는 부분들 위주로 확인**할 것!
-
-사진은 최근 사진을 가져다 쓴거기 때문에 **"페이지 구조"가 다를** 수 있고 이는 추후에 포스팅된 게시물을 참고하자
-
-크게 아래와 같이 **7부위** 폰트 적용을 같이 확인해보자
-
-* 페이지
-  * Recent Posts
-  * 카테고리별
-* 왼쪽 사이드바 부분
-  * 게시물 밖에서의 왼쪽 사이드바
-  * 게시물 안에서의 왼쪽 사이드바
-* 상위바 부분
-* breadcrumbs(경로)
-  * 본문과 카테고리별 페이지에 있는 경로
-* 본문
-
-<br>
-
-### 1. 페이지 - Recent Posts(최근 포스트)
-
-기본적으로 `home.html` 에 해당 페이지 제목이 있으며 본인은 이를 `archive.html` 로 제목 설정을 옮겼다!  
-이때, `archive__subtitle__default` 를 `_archive.scss` 에서 추가하여 해당 제목에 적용했다.
-
-이런 자세한 내부 페이지 구조는 다음 포스팅에서 정리할 생각이다.
-
-**결론은 `_sass/minimal-mistakes/_archive.scss` 에서 `archive__subtitle__default` 코드를 추가하여 사용!**
-
-```scss
-//추가
-.archive__subtitle__default{
-  margin: 0.8em 0 0;
-  padding-bottom: 0.5em; // 추가
-  margin-bottom: 0.9em; // 추가
-  font-size: $type-size-3;
-  color: mix(rgb(84, 100, 173),$primary-color, 40%);
-  border-bottom: 1px solid $border-color;
-  font-family: $serif; // 수정후
-
-  + .list__item .archive__item-title {
-    margin-top: 0.5em;
+  &:hover {
+    color: $link-color-hover;
+    outline: 0;
   }
 }
 ```
 
-<br>
-
-**Recent Posts 부분에 $serif 인 "Coming Soon" 적용 모습**
-
-<img src="https://github.com/BH946/bh946.github.io/assets/80165014/26f034b1-4fd5-486c-8b61-62513d7ddeed" alt="image" style="zoom:80%;" /> 
-
-<br>
-
-### 2. 페이지 - 카테고리별
-
-
-
-
-
-
-
-```scss
-.archive__subtitle {
-  // margin: 1.414em 0 0.5em; // 수정전
-  margin: 0.8em 0 0;
-  padding-bottom: 0.5em; // 추가
-  margin-bottom: 0.9em; // 추가
-  // font-size: $type-size-5; // 수정전
-  font-size: $type-size-3;
-  color: mix(rgb(84, 100, 173),$primary-color, 40%);
-  border-bottom: 1px solid $border-color;
-  font-family: $cute; // 수정후
-
-  + .list__item .archive__item-title {
-    margin-top: 0.5em;
-  }
-}
-```
-
-
-
-
-
-<br>
-
-### 3. 왼쪽 사이드바 부분 - 게시물 밖
-
-
-
-
-
-<br>
-
-### 4. 왼쪽 사이드바 부분 - 게시물 안
-
-
-
-
-
-<br>
-
-### 5. 상위바 부분
-
-
-
-<br>
-
-### 6. breadcrumbs (경로부분) - 본문, 카테고리별
-
-
-
-<br>
-
-### 7. 본문
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-**원하는곳 2군데에 폰트 적용해보겠다.**
-
-<br>
-
-#### 1. 블로그 전체
-
-* `assets/css/main.scss` 에서 구글 폰트에서 `@import` 를 가져와 적용한다.
-  * `html에 head` 로 적용하는 방법도 있는데, 그 방법이 더 좋다고는 하지만  
-    여기서는 그냥 css 방식으로 하겠다.
-* 위에서 이미 `$sans-serif` 에 추가해놨기 때문에 바로 블로그 전체에 폰트 적용이 된다.
-  * 왜냐하면 전역변수인 `$sans-serif` 이것이 이미 여기 저기서 사용중이고,  
-    우리는 여기에 우선순위로 `우리가 가져온 폰트` 를 먼저 적용되게 왼쪽에 적었을 뿐이다. 
-  * 사용 폰트는 **"Coming Soon"** 이 되는것이다.
-
-<br>
-
-#### 2. 본문
-
-* `_sass/minimal-mistakes/_base.scss` 파일 안에 있는 `body 블록`의 `font-family` 를 수정한다.
-  * `monospace` 를 적용해서 **"나눔 고딕 코딩"** 을 적용한다.
-
-<br>
-
-### 세부 적용
-
-폰트 적용 해보면 알겠지만, 세세하게 적용할 필요가 있다.  
-이곳 저곳 폰트가 조금 섞여서 그렇다.
-
-<br>
-
-1. `HOME / Etc / 작성중` 이런것처럼 게시물 본문 상단에 파일경로가 나오는데 이것이 `Coming Soon` 으로 
-   폰트가 되어있어서 `나눔 고딕 코딩`으로 변경한다.
-
-   * `_includes/breadcrumbs.html` 이 해당 부분 나타내는 html이라서 이부분에서 바로 수정했다.
-   * 특히, 태그에서 바로 스타일 적용하는게 css가 제일 우선으로 적용되기 때문에 바로 수정했다.
-
-   ```html
-   <nav class="breadcrumbs" style="font-family: Nanum Gothic Coding;">
-   ```
-
-   <br>
-
-   **Before**
-
-   ![image-20220907152303605](/images/2022-09-06-blog 디자인 커스텀/image-20220907152303605.png)
-
-   <br>
-
-   **After**
-
-   ![image-20220907152353184](/images/2022-09-06-blog 디자인 커스텀/image-20220907152353184.png)
-
-   <br>
-
-   **추가정보** 
-
-   찾다보니, scss에서도 수정이 가능한것을 찾았고 이방식으로 바꿨다.
-
-   * `html` 을 각각 수정하는것은 유지보수 측면에서 매우 비효율적이므로 바꾸게 되었다.
-
-   * `_sass/minimal-mistakes/_navigation.scss` 에서 breadcrumbs를 검색해서 수정하면 된다.
-
-   ```scss
-   .breadcrumbs {
-     // font-family: $sans-serif; // 수정전
-     font-family: $monospace; // 수정후
-   ```
-
-   <br>
-
-2. 위에서 보다시피 본문의 게시글 제목도 고딕으로 지정되어있지않고, #인 h1~h6도 마찬가지!  
-   따라서 이것을 **"나눔 고딕 코딩"** 을 적용한다.
-
-   * `_sass/minimal-mistakes/_base.scss` 에서 h1~h6 파트에서 수정하면 된다.
-
-   ```scss
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   h6 {
-     margin: 2em 0 0.5em;
-     line-height: 1.2;
-     // font-family: $header-font-family; // 수정전
-     font-family: $monospace; // 수정후
-     font-weight: bold;
-   }
-   ```
-
-   <br>
-
-3. 목차도 마찬가지로 **"Coming Soon"**으로 되어있어서, **"나눔 고딕 코딩"** 을 적용한다.
-
-   * `_sass/minimal-mistakes/_navigation.scss` 에서 toc 파트에서 수정하면 된다.
-
-   ```scss
-   .toc {
-     // font-family: $sans-serif-narrow; // 수정전
-     font-family: $monospace; // 수정후
-   ```
-
-   <br>
-
-4. `archive__subtitle` 은 **"Coming Soon"**으로, `page__title` 은 **"나눔 고딕 코딩"** 을 적용하려 한다.
-
-   * `_sass/minimal-mistakes/_archive.scss` 에서 archive__subtitle 파트를 수정한다.
-   * `_sass/minimal-mistakes/_page.scss` 에서 page__title 파트를 수정한다.
-   * 추가로 archive__item-title 파트 수정하면, 게시글들 제목들 수정가능
-
-   <br>
-
-   **archive__subtitle** 
-
-   ![image-20220907163153081](/images/2022-09-06-blog 디자인 커스텀/image-20220907163153081.png)
-
-   <br>
-
-   **page__title** 
-
-   ![image-20220907163141449](/images/2022-09-06-blog 디자인 커스텀/image-20220907163141449.png)
-
-<br>
-
-### 적용
-
-**Before**
-
-![image-20220906201537429](/images/2022-09-06-blog 디자인 커스텀/image-20220906201537429.png)
-
-<br>
-
-**After**
-
-![image-20220907163734111](/images/2022-09-06-blog 디자인 커스텀/image-20220907163734111.png)
-
-<br><br>
-
-
-
-
-
-
-
-
-
-
-
-적용한 사례(위치)
-
-- 왼쪽 사이드바 부분
-- breadcrumbs (경로부분)
-- 상위바? 네비게이션바일듯
-- 페이지 별로
-- 본문
-
-<br><br>
-
-## 도움받은 사이트
-
-* [깃 블로그_지킬 Minimal-mistakes](https://ansohxxn.github.io/)
-* [공식 홈페이지](https://mmistakes.github.io/minimal-mistakes/docs/stylesheets/#font-stacks)
