--- a/_posts/etc/Blog/2023-12-10-(Blog) 페이지 스타일링(3) - h1,h2 등 소제목 수정 - 깃 블로그 TIP 9.md
+++ b/_posts/etc/Blog/2023-12-10-(Blog) 페이지 스타일링(3) - h1,h2 등 소제목 수정 - 깃 블로그 TIP 9.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] 본문에 h1, h2 등등 소제목 스타일링"
+title:  "[Blog] 페이지 스타일링(3) - h1,h2 등 소제목 수정 - 깃 블로그 TIP 9"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
@@ -13,11 +13,20 @@ typora-root-url: ../../..
 
 
 
-## 본문의 `h1, h2, ... 강조` 스타일링
+# Intro
+
+**사진을 보면 "페이지 스타일링(2)" 는 h1이고, "카테고리 스타일링" 은 h2 이다.**
+
+**이처럼 이 소제목들을 스타일링 해보자!**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/3937a0b6-e232-4a5d-8d13-6faf9dd4f593) 
+
+<br><br>
+
+# 페이지 스타일링(3)
 
 * `_page.scss` 에서 `page__content` 를 수정 해 볼것
   * **아래 코드 나타냈고, h2와 h3을 자주 사용해서 이것만 스타일링 하였다.**
-* `_base.scss` 에서 h1~h6는 거희 사이즈 정도만 정의해서 여긴 안봐도 될듯
 
 ```scss
 // _page.scss
@@ -43,12 +52,3 @@ typora-root-url: ../../..
 }
 ```
 
-<br><br>
-
-## 추후에 할 것
-
-(추후에 게시물들 하나하나 확인해서 글 수정할때 사진들 정상적인지 꼭 확인하고, 다운로드해서 꼭 해결)
-
-Hit추가(방문수), 본문에 이전글 다음글 부분 수정, 구글 애드센스 추가, SEO 자세히 검사 및 수정
-
-애드센스 할때 : https://seungwubaek.github.io/blog/google_adsense/#page-title 참고하자
