--- a/_posts/etc/Blog/2023-12-11-(Blog) 페이지 스타일링(4) - 프로필 & 스크롤바 수정 - 깃 블로그 TIP 10.md
+++ b/_posts/etc/Blog/2023-12-11-(Blog) 페이지 스타일링(4) - 프로필 & 스크롤바 수정 - 깃 블로그 TIP 10.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] 프로필 커스텀 및 기능들 이름 수정"
+title:  "[Blog] 페이지 스타일링(4) - 프로필 & 스크롤바 수정 - 깃 블로그 TIP 10"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
@@ -12,6 +12,42 @@ typora-root-url: ../../..
 
 
 
+# Intro
+
+**아래 그림처럼 "프로필" 과 "스크롤바" 를 따라해보자!**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/1c3cdd5f-7f30-457b-bdbb-3ac2952e3c41) 
+
+<br><br>
+
+# 페이지 스타일링(4)
+
+
+
+## 스크롤바 커스텀
+
+**왼쪽 사이드바와 중앙 본문과 경계면에 있는 스크롤바를 의미한다.**
+
+* `_layouts/default.html` 에서 `<head>` 부분에 코드 추가한다.
+* 원하는 색이나, 원하는 크기, radius 등등 입맛대로 수정할 수 있다.
+* 아래는 내 블로그에 적용된 예시이다.
+
+```html
+<style> 
+    /* 스크롤바 커스텀 */
+      ::-webkit-scrollbar{width: 16px;}
+      ::-webkit-scrollbar-track {background-color:#4b4f52; border-radius: 16px;}
+      ::-webkit-scrollbar-thumb {background-color:#5e6265; border-radius: 16px;}
+      ::-webkit-scrollbar-thumb:hover {background: #a9adaa;}
+      ::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment 
+      {
+          width:12px;height:12px;background:transparent;
+      } 
+</style>
+```
+
+<br><br>
+
 ## 프로필 약간 수정
 
 ### 사진 추가
@@ -21,14 +57,15 @@ typora-root-url: ../../..
 * 참고로 나는 a태그로 링크 타게하고 싶지는 않아서 없애주었다.
 
 * 또한 크기 등 속성을 조절 하였다.
+
   * **이는 `_sdiebar.scss` 에서 `author__avatar` 를 수정하는걸 추천**
-  
+
   * 여기서 너비도 수정해주었다.
-  
+
   * ```scss
     max-width: 190px;
     ```
-  
+
 * 사진 추가는 아래 `_config.yml`를 참고
 
 * `%` 와 `{` 를 함께 사용하는 ruby 문법이 있는데, 이 문법이 자꾸 실행이되기 때문에 사진으로 코드 대체
@@ -61,6 +98,8 @@ typora-root-url: ../../..
 <br><br>
 
 ## TOC, 최근포스트 이름 수정 - ui_text.yml
+
+이미 앞에서 포스팅 했던 내용이기에 간단히 설명한다
 
 * `_data/ui-text.yml` 를 수정한다.
   * `toc_label : "목차"`
